--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,51 @@
 * {
-    font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+  
 }
+
+
 
 .title {
-    text-align: center;
-    background: rgb(74,45,253);
-background: linear-gradient(0deg, rgba(74,45,253,1) 19%, rgba(0,0,0,1) 130%);
-color: white;
-margin-bottom: 10px;
-
-}
-
-.test {
   
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-hr {
-    margin: 0;
-    margin-bottom: 20px;
+  background: rgb(74, 45, 253);
+  background: linear-gradient(
+    0deg,
+    rgba(74, 45, 253, 1) 19%,
+    rgba(0, 0, 0, 1) 130%
+  );
+  color: white;
+  margin-bottom: 10px;
+  padding: 10px;
 }
 
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
-.button-primary {
-    padding: 0;
+#currentWeather {
+  padding: 5px;
 }
 
-.city {
-    border: 1px solid black;
-    padding-left: 10px;
+#currentUv {
+  padding: 3px;
 }
 
-.forcast {
-    border: 1px solid black;
-    padding-left: 5px;
+.low {
+  background: green;
+  color: white;
+}
+
+.med {
+  background: yellow;
+  color: white;
+}
+
+.hi {
+  background: red;
+  color: white;
+}
+
+.fiveDay {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
